--- a/index.html
+++ b/index.html
@@ -98,6 +98,14 @@
             <img src="https://media.discordapp.net/attachments/1392865661209935882/1457837908894679133/image.png?ex=695d74da&is=695c235a&hm=6ebcfa3d674c1c9e203fa97c58f5a21753d762847af6e792d62895aa9cf298b6&=&format=webp&quality=lossless&width=640&height=960" alt="Врядли">
             <p class="meme-caption">ВРЯДЛИ... КЛАССИЧЕСКИЙ ОТВЕТ НА ХЕЙТ</p>
         </div>
+        <div class="meme-img">
+            <img src="https://media.discordapp.net/attachments/1392865661209935882/1457834784347787304/lv_0_20260106010207.jpg?ex=695d71f1&is=695c2071&hm=9319ee2df73e8706172f396f7e08411f92304a2889d268b4a133bdac8641a699&=&format=webp&width=1337&height=960" alt="чат">
+            <p class="meme-caption">Нападение </p>
+        </div>
+		<div class="meme-img">
+            <img src="https://media.discordapp.net/attachments/1392865661209935882/1457836734653010031/image.png?ex=695d73c2&is=695c2242&hm=ff7b7de9fb4b445b03cf4d434d7eef36164ecc26200b288a68ed77c329cec3f1&=&format=webp&quality=lossless&width=960&height=960" alt="аддерли фото">
+            <p class="meme-caption">Аддерли, реальная фотка без парика</p>
+        </div>
     </section>
 
     <section class="gallery">
@@ -138,6 +146,13 @@
     </video>
 
     	<p class="video-caption">ВИДЕО 5: ПОСМЕРТНОЕ СООБЩЕНИЕ ОТ МАРКА (05.01.2026 — НОЧЬ)</p>
+	</div>
+		<div class="video-container" onclick="this.querySelector('video').play(); this.querySelector('.play-button').style.display='none';">
+    <video class="compromat-video" controls controlsList="nodownload">
+        <source src="https://cdn.discordapp.com/attachments/1392865661209935882/1457837338649690220/grok_video_2026-01-06-02-44-57.mp4?ex=695d7452&is=695c22d2&hm=45fbf147b85638d46ff744d93fb5d34d66fee163b984d5f0c278eeaf6990624f&" type="video/mp4">
+    </video>
+
+    	<p class="video-caption">ВИДЕО 6: Переобулся</p>
 	</div>
     </section>
 
