кнопка перехода в библеотеку

--- a/index.html
+++ b/index.html
@@ -50,22 +50,13 @@
             <p style="color: cyan; font-size: 20px; margin-top: 20px;">(скролль вниз — там вся драма)</p>
         </div>
 
-        <div style="border: 5px solid red; padding: 20px; margin-top: 30px; background: #200;">
-            <p style="font-size: 24px; text-align: center; font-style: italic;">"Кого же я создал…" <br> <span style="font-size: 16px;">— Странник (учитель Марка по монтажу)</span></p>
-        </div>
-    </section>
-
-    
-    <center style="margin-top: 40px;">
-        <a href="#" style="color: yellow; font-size: 20px;">[ ВЕРНУТЬСЯ К ВЕЛИКОМУ ЛИКУ ]</a>
-    </center>
+<button class="library-btn" onclick="window.location.href='Library.html'">ПЕРЕЙТИ В БИБЛИОТЕКУ</button>
 
     <footer>
         <p>САЙТ СДЕЛАН ДЛЯ ТЕХ, КТО ПОНИМАЕТ В НАСТОЯЩЕМ ТЕХНО-КРИНЖЕ</p>
         <p>2024-2026 © ADDERLY FAN-ZONE (вечная память + полный компромат)</p>
+        <p>Сайт был сделан ради высмеевания блогера <a href="https://www.youtube.com/@MakuAdarii" style="color: white;">Марка Аддерли</a></p>
+        <p>Сайт был сделан командой из  <a href="https://discord.gg/djWkFTceTT" style="color: white;">Fortuna Linux</a></p>
     </footer>
-</body>
-</html>
-    <script src="script.js"></script>
 </body>
 </html>
