Добавил кнопку назад

--- a/Library.html
+++ b/Library.html
@@ -109,6 +109,7 @@
     <center style="margin-top: 40px;">
         <a href="#" style="color: yellow; font-size: 20px;">[ ВЕРНУТЬСЯ К ВЕЛИКОМУ ЛИКУ ]</a>
     </center>
+    <button class="library-btn" onclick="window.location.href='/'">ПЕРЕЙТИ НАЗАД</button>
     <footer>
         <p>САЙТ СДЕЛАН ДЛЯ ТЕХ, КТО ПОНИМАЕТ В НАСТОЯЩЕМ ТЕХНО-КРИНЖЕ</p>
         <p>2024-2026 © ADDERLY FAN-ZONE (вечная память + полный компромат)</p>
