--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p>2024-2026 © ADDERLY FAN-ZONE (вечная память + полный компромат)</p>
         <p>Сайт был сделан ради высмеевания блогера <a href="https://www.youtube.com/@MakuAdarii" style="color: white;">Марка Аддерли</a></p>
         <p>Сайт был сделан командой из  <a href="https://discord.gg/djWkFTceTT" style="color: white;">Fortuna Linux</a></p>
-        <p>Дискорд канал хейтеров <a href="https://www.youtube.com/@MakuAdarii" style="color: white;">Марка Аддерли</a> <a href="https://discord.gg/cWtdUb7v" style="color: white;">MakuOS</a> </p>
+        <p>Дискорд канал хейтеров <a href="https://www.youtube.com/@MakuAdarii" style="color: white;">Марка Аддерли</a> <a href="https://discord.gg/sx7vW5TSrE" style="color: white;">MakuOS</a> </p>
     </footer>
 </body>
 </html>
